<resources>
    <string name="app_name">Factor Factor</string>
    <string name="app_description">Made by @CaptainIRS for Delta Induction Task 1</string>
    <string name="fastest">Fastest</string>
    <string name="current_streak">Current Streak : %d</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="correct_string">%s x %d ✔</string>
    <string name="wrong_string">%s  ❌</string>
    <string name="play">PLAY</string>
    <string name="stats">STATS</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="wrong">Wrong!</string>
    <string name="timeout">Timeout!</string>
    <string name="cont">Continue…</string>
    <string name="game_over">Game Over!</string>
    <string name="score">Score</string>
    <string name="high_score">High Score!</string>
    <string name="close">Close</string>
    <string name="current_fastest">%f s</string>
    <string name="longest_streak">Longest streak</string>
    <string name="restart">Restart</string>
    <string name="preference_file_key">com.rinish.factorfactor.STATS</string>
    <string name="saved_longest_streak">LONGEST_STREAK</string>
    <string name="saved_high_score">HIGHEST_SCORE</string>
    <string name="saved_fastest_response">FASTEST_RESPONSE</string>
    <string name="lifetime_stats">Lifetime Stats</string>
    <string name="highest_score">Highest Score</string>
    <string name="fastest_response">Fastest Response</string>
    <string name="lives">Lives</string>
    <string name="input_hint">Enter number…</string>
    <string name="streak">Streak</string>
    <string name="logo">Logo</string>
</resources>
