<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#ffffff"
    tools:context=".Activities.GameActivity">

    <RelativeLayout
        android:id="@+id/game_layout_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:visibility="visible"
        tools:context=".Activities.GameActivity">


        <com.rinish.factorfactor.CustomViews.CountDownView
            android:id="@+id/countdown_custom_view"
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <TextView
                android:id="@+id/timer_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textSize="30sp"
                tools:text="00:00" />

        </com.rinish.factorfactor.CustomViews.CountDownView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/countdown_custom_view"
            android:background="@color/light_border" />

        <LinearLayout
            android:id="@+id/contents_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/countdown_custom_view"
            android:layout_marginLeft="2dp"

            android:layout_marginRight="2dp"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/question_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/round_button"
                        android:contentDescription="@string/lives"
                        android:padding="10dp"
                        android:src="@drawable/ic_heart" />

                    <TextView
                        android:id="@+id/life_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:textSize="32sp"
                        tools:text="3" />


                    <TextView
                        android:id="@+id/score_text_view"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:textSize="34sp"
                        android:textStyle="bold"
                        tools:ignore="NestedWeights"
                        tools:text="100" />

                    <TextView
                        android:id="@+id/streak_count_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="32sp"
                        tools:text="3" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/round_button"
                        android:contentDescription="@string/streak"
                        android:padding="10dp"
                        android:src="@drawable/ic_streak" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_border" />


                <TextView
                    android:id="@+id/question_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:textAlignment="center"
                    android:textSize="70sp"
                    android:visibility="visible"
                    tools:ignore="NestedWeights"
                    tools:text="TextView" />

                <EditText
                    android:id="@+id/question_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/input_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textSize="50sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/wrong_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/wrong"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="24sp"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/next_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_button"
                    android:contentDescription="@string/cont"
                    android:src="@drawable/ic_continue"
                    android:visibility="gone" />

            </LinearLayout>

            <View
                android:id="@+id/vertical_separator_view"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/light_border"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/option_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/light_border" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/opt1_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/button"
                            android:textAllCaps="false"
                            android:textSize="30sp"
                            tools:text="Button" />

                        <Button
                            android:id="@+id/opt2_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/button"
                            android:textAllCaps="false"
                            android:textSize="30sp"
                            tools:text="Button" />

                        <Button
                            android:id="@+id/opt3_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:background="@drawable/button"
                            android:textAllCaps="false"
                            android:textSize="30sp"
                            tools:text="Button" />

                    </LinearLayout>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/score_layout_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/game_over"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/final_score_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="32sp"
                tools:text="1234" />

            <TextView
                android:id="@+id/high_score_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/high_score"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="12sp"
                android:visibility="gone" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_column="1"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:text="@string/fastest"
                        android:textAlignment="viewEnd"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fastest_column"
                        android:layout_width="0dp"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:text="@string/current_fastest" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_column="1"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:text="@string/longest_streak"
                        android:textAlignment="viewEnd"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/longest_streak_column"
                        android:layout_width="0dp"
                        android:layout_column="2"
                        android:layout_weight="1"
                        tools:text="12" />
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/close_button"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/close" />

                <Button
                    android:id="@+id/continue_button"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/restart" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>